<resources>
    <string name="app_name">Dice_Roll</string>
    <string name="welcome_to_dice_roll">Welcome To Dice Roll</string>
    <string name="zero">0</string>
    <string name="type_of_dice">Type of dice</string>
    <string name="_4_side">4 side</string>
    <string name="_6_side">6 side</string>
    <string name="_8_side">8 side</string>
    <string name="_10_side">10 side</string>
    <string name="_12_side">12 side</string>
    <string name="_20_side">20 side</string>
    <string name="_1_time_roll_dice">1 time roll dice</string>
    <string name="_2_time_roll_dice">2 time roll dice</string>
    <string name="created_by_parthiv_patel">Created by PARTHIV PATEL</string>
</resources>