<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_dice_roll"
        android:textColor="@color/red"
        android:textSize="30sp"
        android:id="@+id/app_title"
        app:layout_constraintBottom_toTopOf="@+id/display"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/type_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/type_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_of_dice"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.229"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/four_side"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_side"
            tools:layout_editor_absoluteX="102dp"
            tools:layout_editor_absoluteY="256dp" />

        <RadioButton
            android:id="@+id/six_side"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6_side"
            tools:layout_editor_absoluteX="128dp"
            tools:layout_editor_absoluteY="310dp" />

        <RadioButton
            android:id="@+id/eight_side"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8_side"
            tools:layout_editor_absoluteX="135dp"
            tools:layout_editor_absoluteY="346dp" />

        <RadioButton
            android:id="@+id/ten_side"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10_side"
            tools:layout_editor_absoluteX="132dp"
            tools:layout_editor_absoluteY="389dp" />

        <RadioButton
            android:id="@+id/twelve_side"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_12_side"
            tools:layout_editor_absoluteX="138dp"
            tools:layout_editor_absoluteY="423dp" />

        <RadioButton
            android:id="@+id/twenty_side"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_20_side"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="457dp" />


    </RadioGroup>

    <Button
        android:id="@+id/one_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_time_roll_dice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.847"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/two_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2_time_roll_dice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.847"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/created_by_parthiv_patel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.997" />


</androidx.constraintlayout.widget.ConstraintLayout>